src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v7/content/child-2/grandchild-2~fcr-desc.nt
<info:fedora/ag/child-2/grandchild-2/fcr:metadata> <http://purl.org/dc/elements/1.1/title> "Grandchild 2" .
